fixed z-index of about bevry link so it doesn't hide behind content

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -230,7 +230,7 @@ em
 /* Link to Main Website */
 a.main-website
 	position: fixed
-	z-index: 100
+	z-index: 500
 	top: 11px
 	right: 10px
 	padding: 8px 12px
